lukeaddison/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: lukeaddison
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.12
        ports:
          - containerPort: 80
        volumeMounts:
        - name: static-storage 
          mountPath: /usr/share/nginx/html/static
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:            
            memory: 64Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /robots.txt
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /robots.txt
            port: 80
          periodSeconds: 3
      volumes:
      - name: static-storage
        persistentVolumeClaim:
          claimName: static
      - name: nginx-config
        configMap:
          name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: lukeaddison
spec:
  selector:
    component: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
