lukeaddison/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: lukeaddison
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:   
      containers:
      - name: postgres
        image: postgres:9.3           
        resources:
          requests:
            memory: 512Mi
            cpu: 500m
          limits:            
            memory: 1Gi
            cpu: 1000m
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 180
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 5432
          name: https
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: "/var/lib/postgresql/data"   
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: lukeaddison
spec:
  ports:
  - name: https
    port: 5432
  selector:
    app: postgres
